Working on implementing the location/asset hierarchy.

--- a/lua_widget_m4_info.properties
+++ b/lua_widget_m4_info.properties
@@ -1,5 +1,5 @@
 #This file contains the lua m4Constants, the widgetQualifying ids and the type of the widget
-#Thu May 22 19:09:17 EDT 2014
+#Fri May 23 17:08:56 EDT 2014
 ~|~frmDowntime.HBox0c75f81874c1f42=box
 ~|~frmValveInspection.HBox0b56740eae09645=box
 ~|~popTimePicker.CopyButton0bcf4d218cf034e=button
@@ -11,6 +11,7 @@
 ~|~popTimePicker.CopyVBox0d3418e71737442=box
 ~|~popupInstrument.CopyLabel079d72d55877849=label
 ~|~popupEquipment.CopyhbxSelectedSite0a83de29403554e=box
+~|~popupArea.hbxSite=box
 ~|~frmValveInspection.CopyHBoxproblemCode09f431432eb0743=box
 ~|~frmViewAwaitingWO.CopyLabel00e429794d33c49=label
 ~|~popAttachments.HBox03a58a73124034d=box
@@ -23,7 +24,6 @@
 ~|~frmViewActiveWO.navMoreInfo=button
 ~|~popupSubEquipment.CopyHBox0d6db1fa1345943=box
 ~|~frmViewAwaitingWO.CopyLabel0933d517e58f64b=label
-~|~popupArea.CopyhbxSelectedArea009b68bd9620740=box
 ~|~frmValveInspection.CopyHBox0f8a66579044d48=box
 ~|~popupSite.CopyButton0302e6379156b45=button
 ~|~popLocationFilter.combobox1568159912394375=combobox
@@ -35,12 +35,10 @@
 ~|~frmViewActiveWO.CopyLabel04b6703bba78b4f=label
 ~|~frmCreateWO.swiATF=switch
 ~|~frmEditActiveWO.CopyHBoxproblemCode053448eb49a624b=box
-~|~popupSite.CopyhbxSelectedSite0f4539554e5b34f=box
 ~|~popupFacility.CopyHBox09c3bdd4f285b41=box
 ~|~frmViewActiveWO.CopyButton0443fe6b1224e46=button
 ~|~popupSubEquipment.CopyhbxSelectedSite007380155179146=box
 ~|~popupGGS.CopyButton0f561e1d9072c42=button
-~|~popupArea.CopyLabel0b8a98a3a7a5a4f=label
 ~|~frmEditActiveWO.hboxMain=box
 ~|~frmViewAwaitingWO.CopyLabel0752fd18ea8df40=label
 ~|~popupInstrument.CopyhbxSelectedSite015b13076d3434b=box
@@ -147,7 +145,6 @@
 ~|~popupFacSystem.CopyhbxSelectedSite0675e4a635f8e47=box
 ~|~popChangeWOStatus.txtComment=textarea2
 ~|~frmEditActiveWO.navCreateWorkOrder=button
-~|~popupArea.CopyLabel0dab0ffa8d1db45=label
 ~|~frmValveInspection.CopyTextField0cf856c2e055e46=textbox2
 ~|~frmValveInspection.CopyHBox000071a938b4f4d=box
 ~|~frmActiveWOList.Label058bff9804f4f45=label
@@ -218,7 +215,6 @@
 ~|~frmViewActiveWO.CopyLabel07f281a084e0744=label
 ~|~frmViewMoreInfo=form2
 ~|~frmDowntime.CopyLabel07718c2ae276c41=label
-~|~popupArea.CopyLabel08f87ef10511f41=label
 ~|~popupFacSubsys.CopyLabel0a8bbf8295a924d=label
 ~|~popWOApproval.CopyLabel03190e30a9e724f=label
 ~|~popChangeWOStatus.HBox062dc4158474f4c=box
@@ -231,7 +227,6 @@
 ~|~popupSubEquipment.CopyhbxSelectedSite0b0b2cf00bbea48=box
 ~|~popupInstrument.hbxSelectedArea=box
 ~|~popDueDateFilter.CopyButton0d1454a321f8845=button
-~|~popupSite.CopyLabel0f5d19b04c30847=label
 ~|~frmMainMenu=form2
 ~|~frmApprovalWOList.navActiveWorkOrders=button
 ~|~frmDowntime.CopyHBoxproblemCode07a9f578aff6d42=box
@@ -275,15 +270,14 @@
 ~|~frmViewAwaitingWO.CopyLabel041c1b738c2ad44=label
 ~|~frmViewAwaitingWO.CopyHBox0620cdd4316d042=box
 ~|~frmValveInspection.CopyHBox04348cff9abdf4b=box
-~|~frmViewActiveWO.vboxNav=box
 ~|~popupEquipment.CopyhbxSelectedSite07c129eabf2034e=box
+~|~frmViewActiveWO.vboxNav=box
 ~|~frmValveInspection.VBox0ce3a326052c948=box
 ~|~frmViewAwaitingWO.HBox063dff2d238b340=box
 ~|~frmMainMenu.navMoreInfo=button
 ~|~frmCreateWO.Button0862f8d887ce641=button
 ~|~frmValveInspection.CopyHBox04af345a7673e49=box
 ~|~popupFacSystem.CopyLabel0a9b6774f91af40=label
-~|~popupArea.CopyhbxSelectedSite0cb43e78ef88b4f=box
 ~|~frmApprovalWOList.CopyVBox0e0301e03413642=box
 ~|~frmViewAwaitingWO.navMoreInfo=button
 ~|~frmMainMenu.navDowntime=button
@@ -323,7 +317,6 @@
 ~|~frmActiveWOList.btnPriorityFilter=button
 ~|~popupInstrument.Button046ec36f894e941=button
 ~|~frmViewMoreInfo.CopyLabel0f2d8e5c336284d=label
-~|~popupArea.CopyhbxSelectedArea07dc2eff816504d=box
 ~|~frmDowntime.navAwaitingApproval=button
 ~|~frmCreateWO.Label03e6fb1d37b3342=label
 ~|~frmViewActiveWO.CopyHBox07b6c0248cb0247=box
@@ -354,8 +347,8 @@
 ~|~frmViewActiveWO.Button08d29ce5c44a44b=button
 ~|~frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
 ~|~popupArea.CopyHBox03c50b568f6cf4d=box
+~|~popupArea.segArea=segment2
 ~|~popDueDateFilter.CopyButton0bcf4d218cf034e=button
-~|~popupArea.CopyhbxSelectedArea019b16609c91c41=box
 ~|~frmValveInspection.CopyComboBox04f7c574a7dcd44=combobox
 ~|~frmCreateWO.CopyLabel0e3617d6326f84b=label
 ~|~frmEditActiveWO.Image0356199433e7a41=image2
@@ -375,7 +368,6 @@
 ~|~popChangeWOStatus.RadioButtonGroup0ec7239fce7c242=radiobuttongroup
 ~|~frmValveInspection.Button077cdd09588df4c=button
 ~|~frmViewActiveWO.HBox087a589b4e64d49=box
-~|~popupSite.CopyhbxSelectedSite0695b7a40d31e40=box
 ~|~frmDowntime.CopyLabel01f62ce85e2914f=label
 ~|~frmMoreInfoList=form2
 ~|~popLongdesc.CopyButton0f2d885d0009140=button
@@ -425,6 +417,7 @@
 ~|~frmValveInspection.CopyComboBox0b9f886476ef04d=combobox
 ~|~frmValveInspection.CopyLabel0b2416cfad20d4e=label
 ~|~popupFacSubsys.CopyhbxSelectedSite0bc0535e4be6f4b=box
+~|~popupArea.lblSite=label
 ~|~frmValveInspection.CopyLabel006a0caa30f0040=label
 ~|~frmValveInspection.CopyLabel011d19559ba1048=label
 ~|~popupInstrument.Button09ef9222c9d0a4f=button
@@ -453,7 +446,6 @@
 ~|~popLocationFilter.CopyButton0bcf4d218cf034e=button
 ~|~frmViewActiveWO.CopyHBox02268996263ad43=box
 ~|~frmDowntime.ComboBox01868aea2e88547=combobox
-~|~popupSite.CopyLabel0ec466043ce4d46=label
 ~|~frmValveInspection.CopyTextField0ef96ea43eb0249=textbox2
 ~|~popupFacSubsys.CopyLabel0927e5d86ca0c4a=label
 ~|~frmCreateWO.cbxWorkCategory=combobox
@@ -468,7 +460,6 @@
 ~|~frmValveInspection.CopyComboBox0988e7ee327ae40=combobox
 ~|~popupFacSystem.CopyButton05c72f1e8858f40=button
 ~|~frmViewMoreInfo.CopyButton0a7c6edbb2be947=button
-~|~popupSite.CopyLabel05b50cf0e211049=label
 ~|~frmEditActiveWO.CopyHBoxproblemCode00c73b61608514c=box
 ~|~frmDowntime.CopyHBoxproblemCode0de80eb4caa944f=box
 ~|~popTimePicker.CopyHBox087eed2ceed8d4a=box
@@ -482,7 +473,6 @@
 ~|~frmViewActiveWO=form2
 ~|~frmCreateWO.hboxPriority=box
 ~|~frmValveInspection.CopyLabel01c6bb54d8d1941=label
-~|~popupArea.CopyLabel0434dc119cd4b48=label
 ~|~frmViewMoreInfo.hboxMain=box
 ~|~frmEditActiveWO.navMoreInfo=button
 ~|~frmViewActiveWO.HBox07c029e0c0eb64d=box
@@ -548,6 +538,7 @@
 ~|~popupFacSystem.CopyLabel0c565109fad2442=label
 ~|~popLocationFilter.hbox1568159912380697=box
 ~|~frmMoreInfoList.Segment06653d08601054e=segment2
+~|~popupSite.segSite=segment2
 ~|~frmEditActiveWO.navAwaitingApproval=button
 ~|~popLongdesc.VBox049a8fca94aba47=box
 ~|~frmValveInspection.CopyLabel044b12f557bcf46=label
@@ -601,7 +592,6 @@
 ~|~frmViewActiveWO.navCreateWorkOrder=button
 ~|~frmValveInspection.CopyTextField0becb3bc1c46946=textbox2
 ~|~frmEditActiveWO.CopyHBoxproblemCode037af49fffd3440=box
-~|~popupSite.CopyhbxSelectedSite03faf6c9ff23c45=box
 ~|~popupFacSystem.CopyhbxSelectedArea0041ff6617e634c=box
 ~|~frmDowntime.CopyHBoxproblemCode0049cfc02e4d849=box
 ~|~popupEquipment=popup
