--- a/widgetinfo.properties
+++ b/widgetinfo.properties
@@ -1,5 +1,5 @@
 #
-#Thu May 22 19:09:17 EDT 2014
+#Fri May 23 17:08:56 EDT 2014
 tablet$0$frmViewMoreInfo.CopyLabel08691d38a20c54c=label
 tablet$0$frmApprovalWOList.navMoreInfo=button
 tablet$0$popupFacSystem.CopyButton05c72f1e8858f40=button
@@ -79,7 +79,6 @@ tablet$0$frmCreateWO.CopyButton07b4dc01acbe946=button
 tablet$0$popupFacility.CopyhbxSelectedSite05d923b0728644e=box
 tablet$0$frmCreateWO.CopyButton00efc277a014444=button
 tablet$0$popupInstrument.CopyLabel0304513b4bd164c=label
-tablet$0$popupArea.CopyLabel0b8a98a3a7a5a4f=label
 tablet$0$frmViewAwaitingWO.CopyHBox054a7688c99f04c=box
 tablet$0$frmViewActiveWO.CopyLabel04eb1ca1ff91947=label
 tablet$0$frmValveInspection.Button03a4b925a66854f=button
@@ -136,6 +135,7 @@ tablet$0$frmValveInspection.CopyHBox012bf2ca78f6141=box
 tablet$0$popChangeWOStatus.CopyLabel0004a850eaf7e49=label
 tablet$0$frmMoreInfoList.navMoreInfo=button
 tablet$0$frmEditActiveWO.CopyLabel0e6b4ba6a0c7b42=label
+tablet$0$popupArea.segArea=segment2
 tablet$0$HBox05936750fff9f49=box
 tablet$0$frmMoreInfoList.navDowntime=button
 tablet$0$frmMoreInfoList.vboxNav=box
@@ -186,7 +186,6 @@ tablet$0$frmEditActiveWO.navCreateWorkOrder=button
 tablet$0$frmCreateWO.CopyComboBox044e2ed2adaa347=combobox
 tablet$0$popupSubEquipment.CopyhbxSelectedSite058fcb4d524184a=box
 tablet$0$frmCreateWO.navActiveWorkOrders=button
-tablet$0$popupArea.CopyLabel0dab0ffa8d1db45=label
 tablet$0$popLongdesc.HBox02b07e2e0911b45=box
 tablet$0$frmCreateWO.CopyLabel0df4ce4c5db2440=label
 tablet$0$frmViewActiveWO.navActiveWorkOrders=button
@@ -196,7 +195,6 @@ tablet$0$frmActiveWOList.lblDueDateFilter=label
 tablet$0$frmViewMoreInfo.CopyLabel0a085706adae14a=label
 tablet$0$frmCreateWO.Label07311667907d440=label
 tablet$0$frmValveInspection.CopyHBox04af345a7673e49=box
-tablet$0$popupArea.CopyhbxSelectedSite0cb43e78ef88b4f=box
 tablet$0$frmDowntime.CopyHBoxproblemCode06373760f48384a=box
 tablet$0$frmCreateWO.CopyLabel0231d0ce05c444c=label
 tablet$0$frmValveInspection.CopyHBoxproblemCode007f91ffe198846=box
@@ -216,6 +214,7 @@ tablet$0$frmEditActiveWO.CopyLabel05f17e1d5648a4d=label
 tablet$0$frmViewMoreInfo.vboxNav=box
 tablet$0$popupFacSystem.CopyhbxSelectedSite01d453b02334346=box
 tablet$0$popupFacSystem=popup
+tablet$0$popupArea.lblSite=label
 tablet$0$frmValveInspection.CopyComboBox0b9f886476ef04d=combobox
 tablet$0$popupFacSubsys.CopyLabel0bcd8fa3dfe3548=label
 tablet$0$frmViewActiveWO.hboxMain=box
@@ -229,7 +228,6 @@ tablet$0$popWOApproval.CopyButton03700868ebd3c4f=button
 tablet$0$popLongdesc=popup
 tablet$0$popupInstrument.HBox00ec5efe5e8704a=box
 tablet$0$popDueDateFilter.CopyHBox087eed2ceed8d4a=box
-tablet$0$popupArea.CopyhbxSelectedArea07dc2eff816504d=box
 tablet$0$popChangeWOStatus.HBox0a4ec2ca4e08040=box
 tablet$0$popupSite.CopyButton0373777d2b4ed48=button
 tablet$0$popupSite=popup
@@ -261,12 +259,10 @@ tablet$0$frmCreateWO.txtTitle=textbox2
 tablet$0$popTimePicker.CopyHBox087eed2ceed8d4a=box
 tablet$0$frmEditActiveWO.CopyVBox0e2dfec9a5dbb41=box
 tablet$0$frmDowntime.CopyHBoxproblemCode0de80eb4caa944f=box
-tablet$0$popupArea.CopyLabel08f87ef10511f41=label
 tablet$0$frmValveInspection.CopyLabel040a42463738d46=label
 tablet$0$frmValveInspection.CopyTextField003281708ff164e=textbox2
 tablet$0$frmDowntime.CopyLabel040b4f784ab644c=label
 tablet$0$popDueDateFilter.CopyButton0bcf4d218cf034e=button
-tablet$0$popupArea.CopyhbxSelectedArea019b16609c91c41=box
 tablet$0$frmViewAwaitingWO.navMoreInfo=button
 tablet$0$frmMainMenu.vboxNav=box
 tablet$0$frmCreateWO.CopyComboBox0e3d53e26078543=combobox
@@ -280,7 +276,6 @@ tablet$0$popupFacSubsys.CopyLabel03a4fbcc06af04c=label
 tablet$0$popupInstrument.CopyhbxSelectedSite02bd92234e2c940=box
 tablet$0$frmEditActiveWO.CopyHBox0c97e7ed444a243=box
 tablet$0$frmEditActiveWO.CopyButton0f8ce1e3199d448=button
-tablet$0$popupSite.CopyLabel0f5d19b04c30847=label
 tablet$0$popupFacSubsys.CopyhbxSelectedArea0bff36d5ae3354a=box
 tablet$0$popupSite.CopyButton0302e6379156b45=button
 tablet$0$frmViewMoreInfo.CopyLabel00f77a45ee9e548=label
@@ -291,7 +286,6 @@ tablet$0$frmViewActiveWO.CopyLabel0783a75e697474d=label
 tablet$0$popAttachments.Label00ce247c1b5bc44=label
 tablet$0$popupFacSubsys.CopyButton0cf138484de6e4e=button
 tablet$0$popDueDateFilter=popup
-tablet$0$popupSite.CopyhbxSelectedSite0695b7a40d31e40=box
 tablet$0$frmCreateWO.CopyComboBox066b2a180a53c42=combobox
 tablet$0$frmValveInspection.CopyLabel0b2416cfad20d4e=label
 tablet$0$frmValveInspection.CopyTextField0ef96ea43eb0249=textbox2
@@ -313,6 +307,7 @@ tablet$0$frmViewMoreInfo.label1568159912405675=label
 tablet$0$popPriorityFilter=popup
 tablet$0$popLocationFilter.CopyButton0bcf4d218cf034e=button
 tablet$0$frmCreateWO.VBox0ae5e302cb95148=box
+tablet$0$popupArea.hbxSite=box
 tablet$0$frmValveInspection.CopyLabel044b12f557bcf46=label
 tablet$0$frmCreateWO.hboxAsset=box
 tablet$0$popupSubEquipment.CopyLabel073565767bf2c40=label
@@ -330,6 +325,7 @@ tablet$0$frmValveInspection.Button05714b209c9e646=button
 tablet$0$frmValveInspection.CopyLabel0f4a939db351742=label
 tablet$0$frmViewMoreInfo.CopyHBox08b4357c544c342=box
 tablet$0$frmDowntime.navDowntime=button
+tablet$0$popupSite.segSite=segment2
 tablet$0$frmViewActiveWO.CopyLabel08cb2e16ea0f643=label
 tablet$0$popupGGS.CopyhbxSelectedSite00eb4dd3bc5154b=box
 tablet$0$popLocationFilter.hbox1568159912380697=box
@@ -497,13 +493,11 @@ tablet$0$popupEquipment.CopyhbxSelectedSite0d3c8ec5259a547=box
 tablet$0$frmCreateWO.Label0d28fb78c50c74e=label
 tablet$0$frmActiveWOList.navAwaitingApproval=button
 tablet$0$frmValveInspection.CopyLabel020146862fb514a=label
-tablet$0$popupSite.CopyLabel0ec466043ce4d46=label
 tablet$0$frmViewActiveWO.CopyHBox0164edd9d181b47=box
 tablet$0$popupFacSubsys.CopyhbxSelectedSite0c27c9b8661d045=box
 tablet$0$frmEditActiveWO.CopyComboBox05611e3e70d6a47=combobox
 tablet$0$frmCreateWO.CopyButtonScanbarcode0e5c2601049354c=button
 tablet$0$frmDowntime.CopyLabel07718c2ae276c41=label
-tablet$0$popupSite.CopyhbxSelectedSite03faf6c9ff23c45=box
 tablet$0$popDueDateFilter.calDueDate=calendar
 tablet$0$frmViewActiveWO.CopyLabel0b3fdd781891947=label
 tablet$0$popChangeWOStatus.cbxRemedyCode=combobox
@@ -517,7 +511,6 @@ tablet$0$frmValveInspection.CopyTextField0becb3bc1c46946=textbox2
 tablet$0$popupSubEquipment.CopyHBox0d6db1fa1345943=box
 tablet$0$popAttachments=popup
 tablet$0$popChangeWOStatus.Button0ee1a260287f842=button
-tablet$0$popupArea.CopyLabel0434dc119cd4b48=label
 tablet$0$popWOApproval=popup
 tablet$0$frmValveInspection.Button077cdd09588df4c=button
 tablet$0$frmDowntime.CopyComboBox07576ca61d4d447=combobox
@@ -559,7 +552,6 @@ tablet$0$popChangeWOStatus.CopyLabel0c6177723e9dd4a=label
 tablet$0$frmViewActiveWO.navAwaitingApproval=button
 tablet$0$frmViewAwaitingWO.CopyLabel0933d517e58f64b=label
 tablet$0$popupFacility.CopyLabel079f089a6f5cc4a=label
-tablet$0$popupArea.CopyhbxSelectedArea009b68bd9620740=box
 tablet$0$popupGGS.CopyButton05b86474a8d924e=button
 tablet$0$frmValveInspection.CopyHBox0f8a66579044d48=box
 tablet$0$frmDowntime.CopyHBoxproblemCode07a9f578aff6d42=box
@@ -574,7 +566,6 @@ tablet$0$frmValveInspection.CopyHBoxproblemCode0046f8572b8a246=box
 tablet$0$frmEditActiveWO.CopyHBoxproblemCode0bd30cdde1ba740=box
 tablet$0$popupFacSubsys.CopyhbxSelectedSite04b47cc184f334e=box
 tablet$0$HBox05936750fff9f49.Label0b7d0cd6882d349=label
-tablet$0$popupSite.CopyhbxSelectedSite0f4539554e5b34f=box
 tablet$0$popupEquipment.CopyLabel0bd0138deca9e42=label
 tablet$0$frmCreateWO.cbxWorkType=combobox
 tablet$0$frmValveInspection.CopyTextField0da51ecca6a4e4f=textbox2
@@ -619,7 +610,6 @@ tablet$0$frmValveInspection.CopyButton0ae6095081e3b40=button
 tablet$0$frmDowntime.CopyComboBox0498bfcc9997347=combobox
 tablet$0$frmDowntime.Button04d8b6375b2ef41=button
 tablet$0$frmValveInspection.CopyTextField0cf856c2e055e46=textbox2
-tablet$0$popupSite.CopyLabel05b50cf0e211049=label
 tablet$0$frmViewAwaitingWO.CopyButton0a7c6edbb2be947=button
 tablet$0$popupFacility.CopyLabel05b54879243f14a=label
 tablet$0$frmValveInspection.CopyHBoxproblemCode0ca816d574b8640=box
